themes/next/assets/scss/base/base.scss
//main: ../style.scss

* {
    -webkit-tap-highlight-color: transparent;
}

html {
    height: var(--min-height);
}

html,
body {
    min-height: var(--min-height);
    @include max(md) {
        &.openSide {
            overflow: hidden;
            #sidebar {
                transform: translateX(100%);
            }
            #content {
                border-radius: 16px 0 0 16px;
                transform: translateX(var(--sidebar-width));
            }
        }
    }
    &.overlay {
        overflow: hidden;
    }
}

html {
    -ms-text-size-adjust: 100%;
    -webkit-text-size-adjust: 100%;
    -moz-osx-font-smoothing: grayscale;
    -moz-font-smoothing: antialiased;
    -webkit-font-smoothing: antialiased;
}

body {
    margin: 0;
    font-size: 16px;
    line-height: 1.5;
    color: var(--text);
    font-family: 'Inter', sans-serif;
    &.simple {
        display: flex;
        align-items: center;
        justify-content: center;
        background: var(--pale);
        & > section {
            flex-grow: 1;
            max-width: 360px;
            padding: 20px;
            h1 {
                margin: 0 0 24px 0;
                line-height: 1;
            }
            .copyright {
                --color: var(--text-light);
                display: table;
                margin: 24px 0 0 0;
                font-size: 14px;
                &:hover {
                    --color: var(--text);
                }
            }
        }
        .aaroniker {
            --color: var(--text-lighter);
            position: absolute;
            display: block;
            bottom: 20px;
            left: 50%;
            transform: translateX(-50%);
            &:hover {
                --color: var(--text-light);
            }
            svg {
                display: block;
            }
        }
    }
    &.interface {
        background: var(--black);
    }
}

a {
    --color: var(--primary);
    text-decoration: none;
    color: var(--color);
    transition: color .3s ease;
    &:link,
    &:active,
    &:visited,
    &:focus {
        text-decoration: none;
        color: var(--color);
    }
    &:hover {
        --color: var(--primary-dark);
    }
}

hr {
    margin: 0;
    clear: both;
    border: 0;
    border-bottom: 1px solid var(--line);
}

strong {
    color: var(--text-dark);
}

